--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/Marcos-Coca/GithubJobs#readme",
   "dependencies": {
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
