--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "./",
+    "paths": {
+      "Home/*":["src/Home/*"],
+      "Common/*":["src/Common/*"]
+    }
   },
   "include": ["src"]
 }
